2003-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in: respect LDFLAGS
	Mac OS X (Darwin) is a BINARY_DISTRIB system

2003-09-16  Sam Steingold  <sds@gnu.org>

	* genclisph.d (string_to_asciz, TheAsciz): enabled
	for Dan Stanger's gdi module

2003-09-15  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (grab_to_object): new function
	(GRAB-POINTER, GRAB-KEYBOARD): use it
	(xlib_error_handler): ise ELT for sequences, not AREF
	include <string.h> to avoid some warnings

2003-09-15  Sam Steingold  <sds@gnu.org>

	* stream.d (SOCKET-OPTIONS): old systems might not have
	SO_RCVLOWAT, SO_SNDLOWAT, SO_RCVTIMEO, SO_SNDTIMEO

2003-09-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (setup.hint, cygwin.README) [cygwin]: new targets

2003-09-13  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Fix msvc distrib
	* makemake.in: don't incude rules unexecutable by msvc nmake
	(makemake, unixconf.h, Makefile, config.status, VERSION)
	Don't create base and full directories for msvc distrib
	Call it differently (clisp-x.xx-msvc-win32.zip)
	Use find -exec for chmod to avoid problems in cygwin
	Call rm -rf directly (RMRF=-del, inappropriate)

2003-09-12  Sam Steingold  <sds@gnu.org>

	* version.h: reinstated for the sake of non-autoconf platforms

2003-09-11  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (scalb, scalbf): commented out
	because they do not compile on either RedHat or Debian

2003-09-10  Sam Steingold  <sds@gnu.org>

	* debug.d (print_back_trace): do not confuse backtrace with prompts

2003-09-09  Sam Steingold  <sds@gnu.org>

	* genclisph.d (constobj): include at compile time (like subr &
	constsym), not at "run time" (clisp.h does not include constobj)
	Reported by Fred Cohen <fc@all.net>

2003-09-09  Bruno Haible  <bruno@clisp.org>

	* unix.d (nonintr_open): Add const to first argument.
	* unixaux.d (nonintr_open): Likewise.

2003-09-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib) [cygwin]: create cygwin package
